# binary_bitbots

./: README.md  frames.gv
base_controller/: CMakeLists.txt  frames.gv  mainpage.dox  package.xml
base_controller/gazebo_world/: gazebo
base_controller/launch/: base_controller.launch
base_controller/msg/: base_velocity.msg
base_controller/nodes/: base_controller.py  base_controller_backup.py  base_controller_modified.py  vp.py  vp_rotational.py
base_controller/src/: velocity_profiler.py
datamatrix_finder/src/: datamatrix_finder.cpp
kdl_parser_test/: CMakeLists.txt  README  package.xml
kdl_parser_test/src/: kdl_parser_test.cpp  youbotarm.urdf
marker_localization/launch/: marker_localization.launch
marker_localization/src/: agent_marker_localization_node.cpp
moveit_planning/: package.xml
moveit_planning/scripts/: move_group.py  oscar_move_group.py
moveit_youbot/moveit_workspace_analysis/launch/: workspace_analysis.launch
moveit_youbot/moveit_youbot/: CMakeLists.txt  package.xml
moveit_youbot/youbot_moveit_tutorials/: untitled
moveit_youbot/youbot_moveit_tutorials/kinematics/: CMakeLists.txt  package.xml
src/TypeIVRML1.3.1_Academic/: README_Linux.txt  README_MacOS.txt  README_Windows_VS2005Express.txt  README_Windows_VS2008Express.txt  README_Windows_VS2010Express.txt
src/TypeIVRML1.3.1_Academic/Documentation/: _doxygen___type_i_v___brief_overview_8h.html  _doxygen___type_i_v___brief_overview_8h_source.html  _doxygen___type_i_v___build_instructions_8h.html  _doxygen___type_i_v___build_instructions_8h_source.html  _doxygen___type_i_v___code__01___r_m_l_position_sample_application_8h.html  _doxygen___type_i_v___code__01___r_m_l_position_sample_application_8h_source.html  _doxygen___type_i_v___code__02___r_m_l_position_sample_application_8h.html  _doxygen___type_i_v___code__02___r_m_l_position_sample_application_8h_source.html  _doxygen___type_i_v___code__03___r_m_l_position_sample_application_8h.html  _doxygen___type_i_v___code__03___r_m_l_position_sample_application_8h_source.html  _doxygen___type_i_v___code__04___r_m_l_velocity_sample_application_8h.html  _doxygen___type_i_v___code__04___r_m_l_velocity_sample_application_8h_source.html  (+194 more)
src/moveit_planning/: CMakeLists.txt
src/moveit_youbot/: frames.gv
youbot_ar_tracker/: CMakeLists.txt  package.xml
youbot_ar_tracker/launch/: .microsoft_hdcam.launch.swp  alvar_hdcam.launch  asus.launch  kinect_tf.launch  m.launch  microsoft_hdcam.launch
(+177 files in other folders)
